# ABC-Mainframe-Computer

./: .gitignore  README.md  iap_send.py  index.html  package-lock.json  package.json  server.py  setup.sh  协议文档.md
.github/workflows/: build.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json  设备配置列表.xlsx
src-tauri/src/: auth.rs  config.rs  database.rs  excel.rs  firmware.rs  iap_server.rs  main.rs  protocol.rs
src/components/: ConfigManager.vue  DeviceIdentity.vue  IapFlasher.vue  NetworkConfig.vue  OtaBack.vue  OtaFront.vue  StatusBar.vue
src/stores/: configStore.js
