[package]
name = "ch32v317-config-tool"
version = "0.1.0"
description = "CH32V317 Device Configuration & IAP Tool"
authors = ["dev"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
