[package]
name = "ch32v317-config-tool"
version = "0.1.0"
description = "CH32V317 Device Configuration & IAP Tool"
authors = ["dev"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
calamine = "0.24"
rust_xlsxwriter = "0.71"
argon2 = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
